<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="edit_note">Edit Note</string>
    <string name="send_mail">Send As Email</string>
    <string name="next">Next</string>
    <string name="title_activity_main">Note Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NoteKeeper</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_share_message">Haven\'t you shared enough?</string>
    <string name="nav_send_message">Send</string>
    <string name="note_title_hint">note title</string>
    <string name="note_text_hint">note text</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="social_media_header">Sync</string>

    <!-- General Preferences -->
    <string name="display_name">Display Name</string>
    <string name="default_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="default_email">youremail@yourhost.com</string>
    <string name="set_reminder">Set Reminder</string>

    <string name="backup_notes">Backup Notes</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="fab_content_description">Create New Note</string>
</resources>
