<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/general_header">

        <EditTextPreference
                app:key="user_display_name"
                app:title="@string/display_name"
                app:defaultValue="@string/default_name"
                app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
                app:key="user_email_address"
                app:title="@string/email_address"
                app:useSimpleSummaryProvider="true"
                app:defaultValue="@string/default_email"
                android:inputType="textEmailAddress"/>s
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/social_media_header">

        <!--<SwitchPreferenceCompat-->
                <!--app:key="sync"-->
                <!--app:title="@string/sync_title"/>-->

        <!--<SwitchPreferenceCompat-->
                <!--app:key="attachment"-->
                <!--app:title="@string/attachment_title"-->
                <!--app:summaryOn="@string/attachment_summary_on"-->
                <!--app:summaryOff="@string/attachment_summary_off"-->
                <!--app:dependency="sync"/>-->
        <ListPreference
                app:key="social_media"
                app:title="Favorite Social Media"
                app:entries="@array/social_media_entries"
                app:entryValues="@array/social_media_values"
                app:defaultValue="Google+"
                app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
